--- a/NoteBook.ipynb
+++ b/NoteBook.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "df = pd.read_csv ('song_data.csv')"
+    "df = pd.read_csv ('song_data.csv')\n",
+    "\n",
+    "print(\"hey\")"
    ]
   }
  ],
@@ -32,7 +34,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
