--- a/NoteBook.ipynb
+++ b/NoteBook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "df = pd.read_csv ('song_data.csv')\n",
-    "\n",
-    "print(\"hey\")"
+    "popularity=df[\"song_popularity\"]\n",
+    "#features=df[\"\"]\n",
+    "df.head()\n",
+    "features=[\"song_duration_ms\",\"acousticness\",\"danceability\",\"energy\",\"instrumentalness\",\"key\",\"liveness\",\"loudness\",\"audio_mode\",\"speechiness\",\"tempo\",\"time_signature\",\"audio_valence\"]"
    ]
   }
  ],
@@ -34,7 +36,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
