--- a/NoteBook.ipynb
+++ b/NoteBook.ipynb
@@ -13,7 +13,9 @@
     "popularity=df[\"song_popularity\"]\n",
     "#features=df[\"\"]\n",
     "df.head()\n",
-    "features=[\"song_duration_ms\",\"acousticness\",\"danceability\",\"energy\",\"instrumentalness\",\"key\",\"liveness\",\"loudness\",\"audio_mode\",\"speechiness\",\"tempo\",\"time_signature\",\"audio_valence\"]"
+    "features=[\"song_duration_ms\",\"acousticness\",\"danceability\",\"energy\",\"instrumentalness\",\"key\",\"liveness\",\"loudness\",\"audio_mode\",\"speechiness\",\"tempo\",\"time_signature\",\"audio_valence\"]\n",
+    "\n",
+    "print(\"hey\")"
    ]
   }
  ],
