--- a/NoteBook.ipynb
+++ b/NoteBook.ipynb
@@ -2,20 +2,188 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>song_name</th>\n",
+       "      <th>song_popularity</th>\n",
+       "      <th>song_duration_ms</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>key</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>audio_mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>time_signature</th>\n",
+       "      <th>audio_valence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Boulevard of Broken Dreams</td>\n",
+       "      <td>73</td>\n",
+       "      <td>262333</td>\n",
+       "      <td>0.005520</td>\n",
+       "      <td>0.496</td>\n",
+       "      <td>0.682</td>\n",
+       "      <td>0.000029</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.0589</td>\n",
+       "      <td>-4.095</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0294</td>\n",
+       "      <td>167.060</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>In The End</td>\n",
+       "      <td>66</td>\n",
+       "      <td>216933</td>\n",
+       "      <td>0.010300</td>\n",
+       "      <td>0.542</td>\n",
+       "      <td>0.853</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.1080</td>\n",
+       "      <td>-6.407</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0498</td>\n",
+       "      <td>105.256</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Seven Nation Army</td>\n",
+       "      <td>76</td>\n",
+       "      <td>231733</td>\n",
+       "      <td>0.008170</td>\n",
+       "      <td>0.737</td>\n",
+       "      <td>0.463</td>\n",
+       "      <td>0.447000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.2550</td>\n",
+       "      <td>-7.828</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0792</td>\n",
+       "      <td>123.881</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>By The Way</td>\n",
+       "      <td>74</td>\n",
+       "      <td>216933</td>\n",
+       "      <td>0.026400</td>\n",
+       "      <td>0.451</td>\n",
+       "      <td>0.970</td>\n",
+       "      <td>0.003550</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1020</td>\n",
+       "      <td>-4.938</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.1070</td>\n",
+       "      <td>122.444</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>How You Remind Me</td>\n",
+       "      <td>56</td>\n",
+       "      <td>223826</td>\n",
+       "      <td>0.000954</td>\n",
+       "      <td>0.447</td>\n",
+       "      <td>0.766</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.1130</td>\n",
+       "      <td>-5.065</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0313</td>\n",
+       "      <td>172.011</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.574</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    song_name  song_popularity  song_duration_ms  \\\n",
+       "0  Boulevard of Broken Dreams               73            262333   \n",
+       "1                  In The End               66            216933   \n",
+       "2           Seven Nation Army               76            231733   \n",
+       "3                  By The Way               74            216933   \n",
+       "4           How You Remind Me               56            223826   \n",
+       "\n",
+       "   acousticness  danceability  energy  instrumentalness  key  liveness  \\\n",
+       "0      0.005520         0.496   0.682          0.000029    8    0.0589   \n",
+       "1      0.010300         0.542   0.853          0.000000    3    0.1080   \n",
+       "2      0.008170         0.737   0.463          0.447000    0    0.2550   \n",
+       "3      0.026400         0.451   0.970          0.003550    0    0.1020   \n",
+       "4      0.000954         0.447   0.766          0.000000   10    0.1130   \n",
+       "\n",
+       "   loudness  audio_mode  speechiness    tempo  time_signature  audio_valence  \n",
+       "0    -4.095           1       0.0294  167.060               4          0.474  \n",
+       "1    -6.407           0       0.0498  105.256               4          0.370  \n",
+       "2    -7.828           1       0.0792  123.881               4          0.324  \n",
+       "3    -4.938           1       0.1070  122.444               4          0.198  \n",
+       "4    -5.065           1       0.0313  172.011               4          0.574  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "df = pd.read_csv ('song_data.csv')\n",
-    "popularity=df[\"song_popularity\"]\n",
-    "#features=df[\"\"]\n",
-    "df.head()\n",
-    "features=[\"song_duration_ms\",\"acousticness\",\"danceability\",\"energy\",\"instrumentalness\",\"key\",\"liveness\",\"loudness\",\"audio_mode\",\"speechiness\",\"tempo\",\"time_signature\",\"audio_valence\"]\n",
     "\n",
-    "print(\"hey\")"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "popularity = df[\"song_popularity\"]\n",
+    "\n",
+    "features = [\"song_duration_ms\",\"acousticness\",\"danceability\",\"energy\",\"instrumentalness\",\"key\",\"liveness\",\"loudness\",\"audio_mode\",\"speechiness\",\"tempo\",\"time_signature\",\"audio_valence\"]"
    ]
   }
  ],
