--- a/NoteBook.ipynb
+++ b/NoteBook.ipynb
@@ -2,20 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train shape: (12619, 13)\n",
+      "y_train shape: (12619,)\n",
+      "X_test shape: (6216, 13)\n",
+      "y_test shape: (6216,)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "df = pd.read_csv ('song_data.csv')\n",
     "popularity=df[\"song_popularity\"]\n",
-    "#features=df[\"\"]\n",
-    "df.head()\n",
-    "features=[\"song_duration_ms\",\"acousticness\",\"danceability\",\"energy\",\"instrumentalness\",\"key\",\"liveness\",\"loudness\",\"audio_mode\",\"speechiness\",\"tempo\",\"time_signature\",\"audio_valence\"]\n",
+    "featuresdf=df[[\"song_duration_ms\",\"acousticness\",\"danceability\",\"energy\",\"instrumentalness\",\"key\",\"liveness\",\"loudness\",\"audio_mode\",\"speechiness\",\"tempo\",\"time_signature\",\"audio_valence\"]]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(featuresdf, popularity, test_size=0.33)\n",
     "\n",
-    "print(\"hey\")"
+    "print(\"X_train shape: {}\".format(X_train.shape))\n",
+    "print(\"y_train shape: {}\".format(y_train.shape))\n",
+    "print(\"X_test shape: {}\".format(X_test.shape))\n",
+    "print(\"y_test shape: {}\".format(y_test.shape))\n",
+    "\n"
    ]
   }
  ],
