--- a/NoteBook.ipynb
+++ b/NoteBook.ipynb
@@ -2,33 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train shape: (12619, 13)\n",
-      "y_train shape: (12619,)\n",
-      "X_test shape: (6216, 13)\n",
-      "y_test shape: (6216,)\n"
+      "intercept: [-1.11124408e-11 -6.77258900e-11 -3.17528641e-11 -5.10336782e-11\n",
+      " -3.44257642e-11 -4.46129471e-11 -4.80580524e-11 -3.82097959e-11\n",
+      " -4.98232725e-11 -5.12893306e-11 -3.16184612e-11 -3.41739449e-11\n",
+      " -2.01111606e-11 -4.54227880e-11 -2.36632146e-11 -4.98394937e-11\n",
+      " -2.31693254e-11 -3.67009882e-11 -3.81985710e-11 -4.58111724e-11\n",
+      " -5.00461436e-11 -4.42035365e-11 -6.07320136e-11 -8.17833062e-11\n",
+      " -5.76267091e-11 -2.46893173e-11  7.37290625e-12 -1.41845650e-11\n",
+      " -3.22954905e-11 -3.37580319e-11 -4.85934375e-12  1.24157153e-11\n",
+      " -1.43871410e-11 -1.99207202e-11  3.48102048e-12 -6.44692329e-11\n",
+      " -9.72968406e-12 -3.47071090e-12 -1.34154124e-12 -2.45082639e-11\n",
+      "  1.43133247e-11 -2.57708944e-11 -1.22094096e-12  6.86749655e-11\n",
+      "  2.40567970e-11  4.36313069e-11  1.08544824e-10  5.99474136e-11\n",
+      "  3.94348018e-11  6.15781037e-11  1.28125786e-10  1.00780279e-10\n",
+      "  1.51496859e-10  2.76735447e-11  1.16765243e-10  8.02538643e-11\n",
+      "  3.67660190e-11  2.88900366e-11  8.03623000e-11 -9.67247323e-12\n",
+      "  1.03425564e-10  1.08190577e-10  5.71373110e-11  5.63117125e-11\n",
+      "  4.55951539e-11  8.78015614e-11  7.05205449e-11  7.72519977e-11\n",
+      "  3.79777420e-11  3.90705543e-11  2.84384191e-11  5.23372409e-11\n",
+      "  1.74366412e-12  3.93918386e-11 -4.14206481e-11  2.83902157e-12\n",
+      " -1.58737171e-12  2.89874809e-11 -3.29814632e-11 -6.05449903e-11\n",
+      " -3.81565683e-11  1.42615870e-12 -2.91192440e-11 -2.95591508e-12\n",
+      " -2.24533376e-12 -2.11786306e-11 -4.25727433e-11  4.09673582e-11\n",
+      " -2.73825648e-11 -2.74578681e-11 -6.03072392e-12  2.38030280e-12\n",
+      " -3.80433683e-11 -3.55417614e-11 -5.75383533e-11 -4.60747205e-11\n",
+      " -2.45439869e-11 -5.74425490e-11 -2.79654467e-11 -3.41273448e-11\n",
+      " -6.60245024e-11]\n",
+      "weights:   [[ 3.11842987e-06 -7.41534887e-11  1.49861654e-11 ...  4.65051603e-09\n",
+      "  -5.64788697e-11 -4.87775350e-12]\n",
+      " [-6.63592676e-07 -7.93688560e-11 -5.01417470e-11 ... -8.75737542e-09\n",
+      "  -2.86272036e-10 -1.09778040e-11]\n",
+      " [-2.09999486e-06 -4.92506694e-11 -4.96120600e-12 ... -4.34441274e-09\n",
+      "  -1.06570457e-10  1.06241437e-11]\n",
+      " ...\n",
+      " [-4.74542234e-06 -3.35551234e-11  1.39464286e-11 ... -7.38707950e-09\n",
+      "  -9.88382417e-11 -2.69034021e-11]\n",
+      " [-1.24585900e-05 -3.26673079e-11  3.81417924e-13 ... -5.50793964e-09\n",
+      "  -1.30647731e-10 -3.53214593e-11]\n",
+      " [-1.19543295e-05 -2.39370610e-11 -3.93893643e-11 ... -9.11765339e-09\n",
+      "  -2.58063188e-10 -2.73677510e-11]]\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "df = pd.read_csv ('song_data.csv')\n",
     "popularity=df[\"song_popularity\"]\n",
     "featuresdf=df[[\"song_duration_ms\",\"acousticness\",\"danceability\",\"energy\",\"instrumentalness\",\"key\",\"liveness\",\"loudness\",\"audio_mode\",\"speechiness\",\"tempo\",\"time_signature\",\"audio_valence\"]]\n",
     "X_train, X_test, y_train, y_test = train_test_split(featuresdf, popularity, test_size=0.33)\n",
     "\n",
-    "print(\"X_train shape: {}\".format(X_train.shape))\n",
+    "\"\"\" print(\"X_train shape: {}\".format(X_train.shape))\n",
     "print(\"y_train shape: {}\".format(y_train.shape))\n",
     "print(\"X_test shape: {}\".format(X_test.shape))\n",
-    "print(\"y_test shape: {}\".format(y_test.shape))\n",
+    "print(\"y_test shape: {}\".format(y_test.shape)) \"\"\"\n",
+    "\n",
+    "clf_lr = LogisticRegression(solver='lbfgs')\n",
+    "clf_lr.fit(X_train, y_train)\n",
+    "\n",
+    "\"\"\" print(\"intercept: {}\".format(clf_lr.intercept_))\n",
+    "print(\"weights:   {}\".format(clf_lr.coef_)) \"\"\"\n",
     "\n"
    ]
   }
